add database config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+## SERVER
+server.port = 8069
+server.servlet.context-path=/v1
 
+## SPRING JPA PROPERTIES HIBERNATE
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+## SPRING PROFILES
+spring.profiles.active=@spring.profiles.active@
