--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,6 @@ spring.datasource.password=secret
 ## SPRING JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+## LOGGING
+logging.level._org.springframework.web.servlet.HandlerMapping.Mappings=debug
