add session api to create

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 ## SPRING PROFILES
 spring.profiles.active=@spring.profiles.active@
+
+## VOTE
+vote.minSessionDuration=1
